HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DuplicateAssociatedTypeName/Source/Main.uv
//! Rejected polymorphism specimen for duplicate associated type names in a class.

internal class DuplicateAssociatedTypeClass {
    internal type Item
    internal type Item = i32
}
